Fixed Safari 5.0 layout problem

--- a/appengine/static/css/screen.css
+++ b/appengine/static/css/screen.css
@@ -13,15 +13,15 @@ img.spinner{margin:100px auto;display:block;}
 #main_nav nav .accordion h3 a{display:block;padding:10px;border-top:1px solid #3D4548;border-bottom:1px solid #3D4548;background:#33393D;color:#FFFFFF;text-decoration:none;font-weight:bold;}
 #main_nav nav .accordion div{display:block;border-top:1px solid #222222;}#main_nav nav .accordion div a,#main_nav nav .accordion div a:active,#main_nav nav .accordion div a:visited{display:block;padding:5px 10px;border:none;color:#FFFFFF;text-decoration:none;font-weight:bold;text-shadow:rgba(0, 0, 0, 0.8) 1px 1px 2px;}
 #main_nav nav .accordion div a.active{border-bottom:1px solid #3D4548;background:#7abcff;background:-moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #7abcff), color-stop(44%, #60abf8), color-stop(100%, #4096ee));background:-webkit-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);background:-o-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);background:-ms-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);background:linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%);}
-#content{margin-left:201px;background:#FFFFFF;}
-#list{width:300px;position:fixed;top:0px;bottom:0px;border-right:1px solid #222222;overflow:hidden;}
+#content{background:#FFFFFF;}
+#list{width:300px;position:fixed;left:201px;top:0px;bottom:0px;border-right:1px solid #222222;overflow:hidden;}
 #list_search{position:fixed;top:0;height:48px;width:300px;border-bottom:1px solid #b9b9b9;background:#eeeeee;background:-moz-linear-gradient(top, #eeeeee 0%, #cccccc 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #cccccc));background:-webkit-linear-gradient(top, #eeeeee 0%, #cccccc 100%);background:-o-linear-gradient(top, #eeeeee 0%, #cccccc 100%);background:-ms-linear-gradient(top, #eeeeee 0%, #cccccc 100%);background:linear-gradient(top, #eeeeee 0%, #cccccc 100%);}#list_search input{display:block;width:270px;height:48px -10px;margin:10px auto 3px auto;}
 #list_search span{display:block;text-align:center;font-size:10px;color:#686868;text-shadow:0px 1px 0px #F8F8F8;}
 #list_items{width:300px;position:fixed;top:49px;bottom:0px;overflow-x:hidden;overflow-y:auto;background:#FBFBFB;}#list_items a,#list_items a:active,#list_items a:visited{display:block;padding:10px;min-height:32px;font-size:13px;border-bottom:1px solid #b9b9b9;text-decoration:none;font-weight:bold;}#list_items a img,#list_items a:active img,#list_items a:visited img{float:left;width:32px;height:32px;margin:0px 10px 10px 0px;background:#FFFFFF;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;}
 #list_items a span,#list_items a:active span,#list_items a:visited span{display:block;padding-top:3px;font-size:11px;font-weight:normal;color:gray;}
 #list_items a.active{background:#b9b9b9;background:-moz-linear-gradient(top, #b9b9b9 0%, #eeeeee 3%, #eeeeee 97%, #b9b9b9 100%);background:-webkit-gradient(linear, left top, left bottom, color-stop(0%, #b9b9b9), color-stop(3%, #eeeeee), color-stop(97%, #eeeeee), color-stop(100%, #b9b9b9));background:-webkit-linear-gradient(top, #b9b9b9 0%, #eeeeee 3%, #eeeeee 97%, #b9b9b9 100%);background:-o-linear-gradient(top, #b9b9b9 0%, #eeeeee 3%, #eeeeee 97%, #b9b9b9 100%);background:-ms-linear-gradient(top, #b9b9b9 0%, #eeeeee 3%, #eeeeee 97%, #b9b9b9 100%);background:linear-gradient(top, #b9b9b9 0%, #eeeeee 3%, #eeeeee 97%, #b9b9b9 100%);}
-#list_content{margin-left:301px;padding:15px;}
-#wide_content{padding:15px;}
+#list_content{margin-left:502px;padding:15px;}
+#wide_content{margin-left:201px;padding:15px;}
 .table{display:table;}.table .row{display:table-row;}.table .row .v_header{display:table-cell;padding:5px 0px;text-align:right;vertical-align:top;white-space:nowrap;}
 .table .row .h_header{display:table-cell;padding:3px 0px 3px 0px;text-align:center;vertical-align:middle;}
 .table .row .cell{display:table-cell;padding:5px;vertical-align:top;}
